# Coursework-2-sem

./: CMakeLists.txt  README.md  main.cpp
header_files/: book.h  book_io.h  book_list.h  book_node.h  consts.h  ref_list.h  ref_node.h  search.h  str.h  str_list.h  str_node.h
res/: lib.txt  other.txt  output.txt  search.txt
source_files/: book_io.cpp  book_list.cpp  book_node.cpp  ref_list.cpp  ref_node.cpp  search.cpp  str_list.cpp  str_node.cpp
